--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -28,7 +28,7 @@ jobs:
       - name: Install Hooktest
         run: pip3 install HookTest
       - name: Run Hooktest
-        run: hooktest ./ --console --scheme epidoc --workers 3 --verbose 10 --manifest --countword --allowfailure
+        run: hooktest ./ --console --scheme epidoc --workers 3 --verbose 10 --manifest --countword 
       # Include manifest.txt as a job artifact so we can re-use it when creating the release.
       - name: Export manifest.txt
         id: export_manifest
